Nearly finished with the chatterbox

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -82,3 +82,14 @@ form input[type=text] {
 .spinner img {
     padding: 10px;
 }
+
+#roomSelect {
+    width: 10%;
+    position: absolute;
+    left:0;
+    top:0;
+    border: 1px solid darkorange;
+    color:darkorange;
+    list-style:none;
+    text-align:center;
+}
